Cambiando la imagen

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+    
 }
 
 *,
@@ -85,11 +86,11 @@ img {
 
 /** Header **/
 .webp .header {
-    background-image: url(../imagenes/grupo_de_perros.jpg);
+    background-image: url(../imagenes/grupo_perros.jpg);
 }
 
 .no-webp .header {
-    background-image: url(../imagenes/grupo_de_perros.jpg);
+    background-image: url(../imagenes/grupo_perros.jpg);
 }
 
 .header {
