--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
 
 .contenedor {
     max-width: 120rem;
-    width: 90%;
+    /* width: 90%; */
     width: min(90%, 120rem);
     /** la linea de arriba es lo mismo que poner **/
     /** max-width: 120rem; y width: 90%;**/
@@ -204,12 +204,98 @@ img {
     background-color: var(--primario);
 }
 
+.cursos {
+    list-style: none;
+}
 
+.widget-curso {
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
 
+.widget-curso:last-of-type {
+    border: none;
+    margin-bottom: 0;
 
+}
+
+.widget-curso__label,
+.curso__label {
+    font-family: var(--fuenteHeading);
+    font-weight: bold;
+}
+
+.widget-curso__info {
+    font-weight: normal;
+}
+
+.widget-curso__label,
+.widget-curso__info {
+    font-size: 2rem;
+}
 
 .footer {
     background-color: rgb(82, 122, 253);
     padding-bottom: 3rem;
     margin-top: 4rem;
 }
+
+/** Sobre nosotros **/
+
+@media (min-width: 768px) {
+    .sobre-nosotros {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+
+}
+
+/** Cursos **/
+.curso {
+    padding: 3rem;
+    border-bottom: 1px solid var(--gris);
+}
+
+@media(min-width: 768px) {
+    .curso {
+        display: grid;
+        grid-template-columns: 33.3% 66.7%;
+        column-gap: 2rem;
+
+    }
+
+}
+
+.curso:last-of-type {
+    border: none;
+}
+
+.curso__label {
+    font-family: var(--fuenteHeading);
+    font-weight: bold;
+}
+
+.curso__info {
+    font-weight: normal;
+}
+
+.curso__label,
+.curso__info {
+    font-size: 2rem;
+}
+
+/** Pagina de Ayuda**/
+
+.formulario {
+    background-color: var(--blanco);
+    width: 95%;
+}
+
+.campo {}
+
+.campo__label {}
+
+.campo__field {}
+
+.campo__field--textarea {}
